--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>Hello World!</title>
 
   </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+  <body style="margin: 0; padding: 0">
+    <noscript>enabl jevascerpt ples</noscript>
+    <div id="app"></div>
+</body>
 </html>
